crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__type_decls-9.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"type FooBar = typeof foo.bar;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 29,
                    },
                },
                span: 0..29,
                kind: TypeDecl(
                    TypeDecl {
                        declare: false,
                        id: Ident {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 5,
                                },
                                end: Position {
                                    line: 0,
                                    column: 11,
                                },
                            },
                            span: 5..11,
                            name: "FooBar",
                        },
                        type_ann: TypeAnn {
                            kind: Query(
                                QueryType {
                                    expr: Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 21,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 28,
                                            },
                                        },
                                        span: 21..28,
                                        kind: Member(
                                            Member {
                                                obj: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 21,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 24,
                                                        },
                                                    },
                                                    span: 21..24,
                                                    kind: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 21,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 24,
                                                                },
                                                            },
                                                            span: 21..24,
                                                            name: "foo",
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                prop: Ident(
                                                    Ident {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 25,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 28,
                                                            },
                                                        },
                                                        span: 25..28,
                                                        name: "bar",
                                                    },
                                                ),
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                },
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 14,
                                },
                                end: Position {
                                    line: 0,
                                    column: 28,
                                },
                            },
                            span: 14..28,
                            inferred_type: None,
                        },
                        type_params: None,
                    },
                ),
            },
        ],
    },
)
